--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
     <div class="max-w-7xl mx-auto"><!-- 上部バー -->
      <div class="flex items-center justify-between px-4 py-2 border-b border-blue-800">
       <div class="flex items-center gap-3"><!-- ロゴ -->
+       <a href="#">
        <div class="flex items-center gap-2">
-        <svg width="40" height="40" viewbox="0 0 40 40" fill="none"><circle cx="20" cy="20" r="18" fill="#1e40af" stroke="white" stroke-width="2" /> <path d="M10 20h20M15 14l5 6-5 6M25 14l-5 6 5 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
+        <img width="40" height="40" src="images/logo.png"/>
         <div>
          <h1 id="company-name" class="text-xl font-bold tracking-wide">新町急行鉄道</h1>
          <p class="text-xs text-blue-200">SHINMACHI EXPRESS RAILWAY</p>
         </div>
        </div>
+       </a>
       </div>
       <div class="hidden md:flex items-center gap-4 text-sm"><a href="#" class="hover:text-blue-200 transition">English</a> <a href="#" class="hover:text-blue-200 transition">お問い合わせ</a> <a href="#" class="hover:text-blue-200 transition">よくあるご質問</a>
       </div>
@@ -112,7 +113,7 @@
        <div class="bg-blue-900 text-white px-6 py-3 flex items-center justify-between">
         <h3 class="font-bold flex items-center gap-2">
          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-         </svg> お知らせ</h3><a href="#" class="text-sm text-blue-200 hover:text-white transition">一覧を見る →</a>
+         </svg> お知らせ</h3><a href="notice" class="text-sm text-blue-200 hover:text-white transition">一覧を見る →</a>
        </div>
        <div class="divide-y divide-gray-100"><a href="#" class="news-item block px-6 py-4">
          <div class="flex items-start gap-4"><span class="text-sm text-gray-500 whitespace-nowrap">2024.01.15</span> <span class="inline-block bg-red-100 text-red-700 text-xs px-2 py-1 rounded">重要</span>
