--- a/notice/index.html
+++ b/notice/index.html
@@ -204,8 +204,7 @@
    </div>
    <div class="border-t border-gray-700 pt-6 flex flex-col md:flex-row items-center justify-between gap-4">
     <div class="flex items-center gap-2">
-     <svg width="30" height="30" viewbox="0 0 40 40" fill="none"><circle cx="20" cy="20" r="18" fill="#1e40af" stroke="white" stroke-width="2" /> <path d="M10 20h20M15 14l5 6-5 6M25 14l-5 6 5 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-     </svg><span id="footer-company-name" class="font-bold">新町急行鉄道</span>
+     <img width="30" height="30" src="images/logo.png"/><span id="footer-company-name" class="font-bold">新町急行鉄道</span>
     </div>
     <p class="text-gray-400 text-sm">© 2024 Shinmachi Express Railway Co., Ltd. All Rights Reserved.</p>
    </div>
