--- a/notice/index.html
+++ b/notice/index.html
@@ -204,7 +204,7 @@
    </div>
    <div class="border-t border-gray-700 pt-6 flex flex-col md:flex-row items-center justify-between gap-4">
     <div class="flex items-center gap-2">
-     <img width="30" height="30" src="images/logo.png"/><span id="footer-company-name" class="font-bold">新町急行鉄道</span>
+     <img width="30" height="30" src="../images/logo.png"/><span id="footer-company-name" class="font-bold">新町急行鉄道</span>
     </div>
     <p class="text-gray-400 text-sm">© 2024 Shinmachi Express Railway Co., Ltd. All Rights Reserved.</p>
    </div>
