--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
        <div class="p-4 space-y-3"><a href="#" class="block p-3 border border-gray-200 rounded-lg hover:border-orange-300 hover:bg-orange-50 transition"> <p class="font-medium text-gray-800">一日乗車券</p><p class="text-sm text-gray-500">全線乗り放題 ¥800</p></a> <a href="#" class="block p-3 border border-gray-200 rounded-lg hover:border-orange-300 hover:bg-orange-50 transition"> <p class="font-medium text-gray-800">週末フリーパス</p><p class="text-sm text-gray-500">土日祝限定 ¥1,200</p></a>
        </div>
       </div><!-- バナー -->
-      <div class="space-y-4"><a href="#" class="block bg-gradient-to-r from-blue-600 to-blue-800 text-white rounded-lg p-4 card-hover"> <p class="font-bold">Soica</p><p class="text-sm text-blue-200">便利なICカード</p></a> <a href="#" class="block bg-gradient-to-r from-green-600 to-green-800 text-white rounded-lg p-4 card-hover"> <p class="font-bold">忘れ物について</p><p class="text-sm text-green-200">お問い合わせはこちら</p></a>
+      <div class="space-y-4"><a href="https://soica.sionsky.jp" class="block bg-gradient-to-r from-blue-600 to-blue-800 text-white rounded-lg p-4 card-hover"> <p class="font-bold">Soica</p><p class="text-sm text-blue-200">便利なICカード</p></a> <a href="#" class="block bg-gradient-to-r from-green-600 to-green-800 text-white rounded-lg p-4 card-hover"> <p class="font-bold">忘れ物について</p><p class="text-sm text-green-200">お問い合わせはこちら</p></a>
       </div>
      </div>
     </div>
